# image-slicer-tauri

./: .gitignore  README.md  RULES.md  build_tauri.bat  index.html  package-lock.json  package.json  update.example.json  vite.config.js  发布到局域网更新服务.bat  项目摘要-新对话交接.md
src/: main.js  riskLexiconPreset.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app.toml
src-tauri/src/: lib.rs  main.rs
